force-app/main/default/objects/US_Specific_Settings__c/US_Specific_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This is where the U.S. specific parameters are defined (thresholds, limitations, etc.).</description>
    <label>U.S. Specific Settings</label>
</CustomObject>