force-app/main/default/objects/US_Specific_Settings__c/fields/Accessories_Warning_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Accessories_Warning_Threshold__c</fullName>
    <defaultValue>4</defaultValue>
    <label>Accessories Warning Threshold</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>