force-app/main/default/objects/US_Specific_Settings__c/fields/Cancelation_Warning_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Cancelation_Warning_Threshold__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Cancelation Warning Threshold</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>