force-app/main/default/objects/US_Specific_Settings__c/fields/Defective_Warning_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Defective_Warning_Threshold__c</fullName>
    <defaultValue>9</defaultValue>
    <label>Defective Warning Threshold</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>