force-app/main/default/objects/US_Specific_Settings__c/fields/Delivery_Warning_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Warning_Threshold__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Delivery Warning Threshold</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>