force-app/main/default/objects/US_Specific_Settings__c/fields/Esthetic_Warning_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Esthetic_Warning_Threshold__c</fullName>
    <defaultValue>2.5</defaultValue>
    <label>Esthetic Warning Threshold</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>