force-app/main/default/objects/US_Specific_Settings__c/fields/Late_Response_Warning_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Late_Response_Warning_Threshold__c</fullName>
    <defaultValue>11.5</defaultValue>
    <label>Late Response Warning Threshold</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>