force-app/main/default/objects/US_Specific_Settings__c/fields/Wrong_Warning_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Wrong_Warning_Threshold__c</fullName>
    <defaultValue>1.4</defaultValue>
    <label>Wrong Warning Threshold</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>